--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,19 +17,34 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="10dp"
             android:layout_width="150dp"
-            android:layout_height="150dp"/>
+            android:layout_height="290dp"/>
 
-    <Button
-            android:id="@+id/btn_call"
-            android:layout_gravity="bottom|center"
-            android:text="call"
+    <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <Button
-            android:id="@+id/btn_change"
-            android:layout_gravity="bottom"
-            android:text="changeCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
+        <Button
+                android:id="@+id/btn_call"
+                android:text="call"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <Button
+                android:id="@+id/btn_change"
+                android:text="switch Camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <Button
+                android:id="@+id/btn_mute"
+                android:text="switch mute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <Button
+                android:id="@+id/btn_mode"
+                android:text="switch voice mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
 </FrameLayout>
